<resources>
    <string name="app_name">Code_challenge3</string>
    <string name="android_developer_fundamentals">Android Developer Fundamentals</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="i_accept_t_c"><![CDATA[I accept T&C]]></string>
    <string name="submit">SUBMIT</string>
    <string name="text">A view group that allows the view hierarchy placed within it to be scrolled. Scroll view may have only one direct child placed within it. To add multiple views within the scroll view, make the direct child you add a view group, for example LinearLayout, and place additional views within that LinearLayout.</string>
    <string name="spinner_example">Spinner Example</string>

</resources>
